[package]
name = "vam_downloader"
version = "0.1.4"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.5"
http-downloader = { version = "0.3", features = ["status-tracker", "speed-limiter", "speed-tracker", "breakpoint-resume", "tracing", "bson-file-archiver"] }
regex = "1.10"
percent-encoding = "2.3"
indicatif = "0.17"